feat: Add image upload functionality
1. Store images using Firebase Storage and implement it using the Firebase Admin SDK.
2. Add event image upload
3. Add user image upload
